# random-walker

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  simulacrum-config.cmake.in
examples/: .gitignore
examples/basic-walk/: CMakeLists.txt  README.md  walk.cpp
examples/custom-engine/: CMakeLists.txt  walk.cpp
examples/marching-squares/basic-example/: CMakeLists.txt  triangles.cpp
examples/random-walks/: CMakeLists.txt
examples/random-walks/basic-walk/: CMakeLists.txt  walk.cpp
examples/random-walks/custom-engine/: walk.cpp
examples/random-walks/sfml-example/: CMakeLists.txt  cardinal-walk.cpp  hex-walk.cpp  walk.cpp
examples/random_walks/: README.md
examples/random_walks/basic-walk/: CMakeLists.txt  walk.cpp
examples/random_walks/custom-engine/: CMakeLists.txt  walk.cpp
examples/random_walks/sfml-example/: CMakeLists.txt  walk.cpp
examples/sfml-example/: CMakeLists.txt  README.md
include/: direction.hpp  point.hpp  simulation.hpp  walker.hpp
src/: walk.cpp
src/pcg/: direction.hpp  point.hpp  random_walk.hpp  simulation.hpp  walker.hpp
src/simulacrum/: marching_squares.hpp  random_walks.hpp
src/simulacrum/marching_squares/: contours.hpp  mesh.hpp
src/simulacrum/random_walks/: random_walks.hpp  simulation.hpp  walker.hpp
test/: CMakeLists.txt  test_uniform_cardinal_walk.cpp
